--- a/directories/people/bod/people.html
+++ b/directories/people/bod/people.html
@@ -1,4 +1,4 @@
-    <div 
+    <div id='item-0'
         class='grid-item
             secmotic
             spain
@@ -6,7 +6,6 @@
             co-founder ceo
             gold'
     >
-        <span class="grid-scroll-offset" id='item-0'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -39,7 +38,7 @@
             </div>
         </div>
     </div>
-    <div 
+    <div id='item-1'
         class='grid-item
             ficodes
             spain
@@ -47,7 +46,6 @@
             cto
             '
     >
-        <span class="grid-scroll-offset" id='item-1'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -79,7 +77,7 @@
             </div>
         </div>
     </div>
-    <div 
+    <div id='item-2'
         class='grid-item
             meditech
             italy
@@ -87,7 +85,6 @@
             general-manager
             gold'
     >
-        <span class="grid-scroll-offset" id='item-2'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -120,7 +117,7 @@
             </div>
         </div>
     </div>
-    <div 
+    <div id='item-3'
         class='grid-item
             hopu---libelium
             spain
@@ -128,7 +125,6 @@
             cso
             gold'
     >
-        <span class="grid-scroll-offset" id='item-3'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -161,7 +157,7 @@
             </div>
         </div>
     </div>
-    <div 
+    <div id='item-4'
         class='grid-item
             madinah-region-development-authority
             saudi-arabia
@@ -169,7 +165,6 @@
             director
             platinum'
     >
-        <span class="grid-scroll-offset" id='item-4'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -199,7 +194,7 @@
             </div>
         </div>
     </div>
-    <div 
+    <div id='item-5'
         class='grid-item
             atos
             france
@@ -207,7 +202,6 @@
             vp
             platinum'
     >
-        <span class="grid-scroll-offset" id='item-5'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -240,7 +234,7 @@
             </div>
         </div>
     </div>
-    <div 
+    <div id='item-6'
         class='grid-item
             nec
             japan
@@ -248,7 +242,6 @@
             fellow
             platinum'
     >
-        <span class="grid-scroll-offset" id='item-6'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -281,7 +274,7 @@
             </div>
         </div>
     </div>
-    <div 
+    <div id='item-7'
         class='grid-item
             addix
             germany
@@ -289,7 +282,6 @@
             managing-director
             gold'
     >
-        <span class="grid-scroll-offset" id='item-7'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
