--- a/directories/people/msc/people.html
+++ b/directories/people/msc/people.html
@@ -1,4 +1,4 @@
-    <div 
+    <div id='item-0'
         class='grid-item
             tritux
             tunisia
@@ -6,7 +6,6 @@
             ceo
             ihubs'
     >
-        <span class="grid-scroll-offset" id='item-0'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -38,7 +37,7 @@
             </div>
         </div>
     </div>
-    <div 
+    <div id='item-1'
         class='grid-item
             engineering
             italy
@@ -46,7 +45,6 @@
             director
             smart-energy'
     >
-        <span class="grid-scroll-offset" id='item-1'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -76,7 +74,7 @@
             </div>
         </div>
     </div>
-    <div 
+    <div id='item-2'
         class='grid-item
             nttdata
             spain
@@ -84,7 +82,6 @@
             researcher
             smart-water'
     >
-        <span class="grid-scroll-offset" id='item-2'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -117,7 +114,7 @@
             </div>
         </div>
     </div>
-    <div 
+    <div id='item-3'
         class='grid-item
             teamdev
             italy
@@ -125,7 +122,6 @@
             co-founder ceo
             smart-agrifood'
     >
-        <span class="grid-scroll-offset" id='item-3'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -158,7 +154,7 @@
             </div>
         </div>
     </div>
-    <div 
+    <div id='item-4'
         class='grid-item
             engineering
             italy
@@ -166,7 +162,6 @@
             director
             smart-cities'
     >
-        <span class="grid-scroll-offset" id='item-4'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -196,7 +191,7 @@
             </div>
         </div>
     </div>
-    <div 
+    <div id='item-5'
         class='grid-item
             eppo
             germany
@@ -204,7 +199,6 @@
             cdto
             smart-energy'
     >
-        <span class="grid-scroll-offset" id='item-5'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -236,7 +230,7 @@
             </div>
         </div>
     </div>
-    <div 
+    <div id='item-6'
         class='grid-item
             city-of-herne
             germany
@@ -244,7 +238,6 @@
             cdo
             smart-cities'
     >
-        <span class="grid-scroll-offset" id='item-6'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -274,7 +267,7 @@
             </div>
         </div>
     </div>
-    <div 
+    <div id='item-7'
         class='grid-item
             hopu---libelium
             spain
@@ -282,7 +275,6 @@
             cso
             smart-cities'
     >
-        <span class="grid-scroll-offset" id='item-7'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -315,7 +307,7 @@
             </div>
         </div>
     </div>
-    <div 
+    <div id='item-8'
         class='grid-item
             nec-lab-europe
             germany
@@ -323,7 +315,6 @@
             manager
             smart-industry'
     >
-        <span class="grid-scroll-offset" id='item-8'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -353,7 +344,7 @@
             </div>
         </div>
     </div>
-    <div 
+    <div id='item-9'
         class='grid-item
             ciudades-del-futuro
             argentina
@@ -361,7 +352,6 @@
             director
             ihubs'
     >
-        <span class="grid-scroll-offset" id='item-9'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -391,7 +381,7 @@
             </div>
         </div>
     </div>
-    <div 
+    <div id='item-10'
         class='grid-item
             easy-global-market
             france
@@ -399,7 +389,6 @@
             ceo
             smart-water'
     >
-        <span class="grid-scroll-offset" id='item-10'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -432,7 +421,7 @@
             </div>
         </div>
     </div>
-    <div 
+    <div id='item-11'
         class='grid-item
             engineering
             italy
@@ -440,7 +429,6 @@
             manager
             smart-industry'
     >
-        <span class="grid-scroll-offset" id='item-11'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -473,7 +461,7 @@
             </div>
         </div>
     </div>
-    <div 
+    <div id='item-12'
         class='grid-item
             hochschule-bochum
             germany
@@ -481,7 +469,6 @@
             professor
             smart-energy'
     >
-        <span class="grid-scroll-offset" id='item-12'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -511,7 +498,7 @@
             </div>
         </div>
     </div>
-    <div 
+    <div id='item-13'
         class='grid-item
             rwth-aachen-university
             germany
@@ -519,7 +506,6 @@
             professor institute-director
             smart-energy'
     >
-        <span class="grid-scroll-offset" id='item-13'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -549,7 +535,7 @@
             </div>
         </div>
     </div>
-    <div 
+    <div id='item-14'
         class='grid-item
             engineering
             italy
@@ -557,7 +543,6 @@
             researcher
             smart-water'
     >
-        <span class="grid-scroll-offset" id='item-14'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -587,7 +572,7 @@
             </div>
         </div>
     </div>
-    <div 
+    <div id='item-15'
         class='grid-item
             atb-bremen
             germany
@@ -595,7 +580,6 @@
             researcher
             smart-agrifood'
     >
-        <span class="grid-scroll-offset" id='item-15'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
