--- a/directories/people/fisab/people.html
+++ b/directories/people/fisab/people.html
@@ -1,4 +1,4 @@
-    <div 
+    <div id='item-0'
         class='grid-item
             the-coca-cola-company
             ireland
@@ -6,7 +6,6 @@
             director
             '
     >
-        <span class="grid-scroll-offset" id='item-0'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -35,7 +34,7 @@
             </div>
         </div>
     </div>
-    <div 
+    <div id='item-1'
         class='grid-item
             udg-alliance
             switzerland
@@ -43,7 +42,6 @@
             director
             associates'
     >
-        <span class="grid-scroll-offset" id='item-1'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -73,7 +71,7 @@
             </div>
         </div>
     </div>
-    <div 
+    <div id='item-2'
         class='grid-item
             université-lumière-lyon-2
             france
@@ -81,7 +79,6 @@
             professor
             associates'
     >
-        <span class="grid-scroll-offset" id='item-2'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -114,7 +111,7 @@
             </div>
         </div>
     </div>
-    <div 
+    <div id='item-3'
         class='grid-item
             rwth-aachen-university
             germany
@@ -122,7 +119,6 @@
             professor institute-director
             associates'
     >
-        <span class="grid-scroll-offset" id='item-3'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -152,7 +148,7 @@
             </div>
         </div>
     </div>
-    <div 
+    <div id='item-4'
         class='grid-item
             university-of-cantabria
             spain
@@ -160,7 +156,6 @@
             professor
             associates'
     >
-        <span class="grid-scroll-offset" id='item-4'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -187,7 +182,7 @@
             </div>
         </div>
     </div>
-    <div 
+    <div id='item-5'
         class='grid-item
             universidad-politécnica-de-madrid
             spain
@@ -195,7 +190,6 @@
             professor
             associates'
     >
-        <span class="grid-scroll-offset" id='item-5'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -228,7 +222,7 @@
             </div>
         </div>
     </div>
-    <div 
+    <div id='item-6'
         class='grid-item
             university-of-murcia
             spain
@@ -236,7 +230,6 @@
             professor
             associates'
     >
-        <span class="grid-scroll-offset" id='item-6'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
@@ -263,7 +256,7 @@
             </div>
         </div>
     </div>
-    <div 
+    <div id='item-7'
         class='grid-item
             fbk
             italy
@@ -271,7 +264,6 @@
             director
             associates'
     >
-        <span class="grid-scroll-offset" id='item-7'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
