--- a/showcase/powered-by-fiware/index.html
+++ b/showcase/powered-by-fiware/index.html
@@ -901,7 +901,65 @@ document.addEventListener("DOMContentLoaded", () => {
 
 <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
 <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
+
+<!-- GeoIP -->
+<script src="https://geoip-js.com/js/apis/geoip2/v2.1/geoip2.js" type="text/javascript"></script>
+<script>
+function getGeoLocation() {
+    return new Promise((resolve, reject) => {
+        // Use the geoip2.insights method to get location information
+        geoip2.insights(
+            function onSuccess(response) {
+                // If successful, extract location information
+                const location = {
+                    latitude: response.location.latitude,
+                    longitude: response.location.longitude,
+                };
+                resolve(location); // Resolve the promise with the location
+            },
+            function onError(error) {
+                reject(error); // Reject the promise if there is an error
+            }
+        );
+    });
+}
+
+// Example usage with async/await
+async function fetchLocation() {
+    try {
+        window.geoLocation = await getGeoLocation();
+        // Do something with the location here (e.g., display it on the UI)
+    } catch (error) {
+        window.geoLocation = {
+                    latitude: null,
+                    longitude: null,
+                    };
+        console.error("Failed to retrieve location:", error);
+    }
+}
+// Call the function to fetch the location
+fetchLocation();
+</script>
+
+<!-- Qualetics -->
+<script src="https://sdk.qualetics.com/qualetics-js-sdk-v3.js"></script>
+<script>
+try {
+    PAGEVIEW_TRACKING = true;
+    OPTIONS = {
+              //host: "ws://api.qualetics.com",
+              //port: 443,
+              trackUserGeoLocation: false
+              };
+    var qualetics = new Qualetics.service("fiwarestaging", "tCYhHGwxFW28", "L4z5mP", PAGEVIEW_TRACKING, OPTIONS);  
+    qualetics.init();
+} catch (error) {
+    console.error("Qualetics initialization failed:", error);
+}
+</script>
+
 <script src="../../app_marketplace.js"></script>
+
 <script>
 	var scr = document.createElement("script");
 	scr.src = "./pageData.js" + "?ts=" + Math.round(new Date().getTime()/3600000);
