added wss (safe) path to connect to qualetics

--- a/showcase/powered-by-fiware/index.html
+++ b/showcase/powered-by-fiware/index.html
@@ -947,7 +947,7 @@ fetchLocation();
 try {
     PAGEVIEW_TRACKING = true;
     OPTIONS = {
-              //host: "ws://api.qualetics.com",
+              host: "wss://api.qualetics.com",
               //port: 443,
               trackUserGeoLocation: false
               };
