--- a/showcase/fiware-ready/sitemap.html
+++ b/showcase/fiware-ready/sitemap.html
@@ -83,7 +83,7 @@ li {
 		<li><a href="https://www.fiware.org/fiware-ready/device-gateway/udg.html">Device Gateway - UDG</a></li>
 		<li><a href="https://www.fiware.org/fiware-ready/digitalilusion/outbeacon.html">Digitalilusion - Outbeacon</a></li>
 		<li><a href="https://www.fiware.org/fiware-ready/distromel/sigeus.html">Distromel - siGEUS</a></li>
-		<li><a href="https://www.fiware.org/fiware-ready/eficae/miluz.html">Eficae - Miluz</a></li>
+		<li><a href="https://www.fiware.org/fiware-ready/eficae-soluciones/miluz.html">Eficae Soluciones - Miluz</a></li>
 		<li><a href="https://www.fiware.org/fiware-ready/eficae-soluciones/industrial-meter-4-0.html">Eficae Soluciones - Industrial Meter 4.0</a></li>
 		<li><a href="https://www.fiware.org/fiware-ready/egm/edgespot.html">EGM - EdgeSpot</a></li>
 		<li><a href="https://www.fiware.org/fiware-ready/engineering/dashram.html">Engineering - Dashram</a></li>
