--- a/directories/people/team/people.html
+++ b/directories/people/team/people.html
@@ -1,5 +1,5 @@
         <div id="item-0" class="grid-item fiware-foundation  technical  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-0' class='cat-bio' data-modal='0'>
                 <div class='city-photo-container'>
                     <picture>
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div id="item-1" class="grid-item fiware-foundation  technical  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-1' class='cat-bio' data-modal='1'>
                 <div class='city-photo-container'>
                     <picture>
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div id="item-2" class="grid-item fiware-foundation  operations  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-2' class='cat-bio' data-modal='2'>
                 <div class='city-photo-container'>
                     <picture>
@@ -83,7 +83,7 @@
             </div>
         </div>
         <div id="item-3" class="grid-item fiware-foundation  technical  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-3' class='cat-bio' data-modal='3'>
                 <div class='city-photo-container'>
                     <picture>
@@ -113,7 +113,7 @@
             </div>
         </div>
         <div id="item-4" class="grid-item fiware-foundation  technical  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-4' class='cat-bio' data-modal='4'>
                 <div class='city-photo-container'>
                     <picture>
@@ -143,7 +143,7 @@
             </div>
         </div>
         <div id="item-5" class="grid-item fiware-foundation  technical  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-5' class='cat-bio' data-modal='5'>
                 <div class='city-photo-container'>
                     <picture>
@@ -173,7 +173,7 @@
             </div>
         </div>
         <div id="item-6" class="grid-item fiware-foundation  operations  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-6' class='cat-bio' data-modal='6'>
                 <div class='city-photo-container'>
                     <picture>
@@ -200,7 +200,7 @@
             </div>
         </div>
         <div id="item-7" class="grid-item fiware-foundation  operations  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-7' class='cat-bio' data-modal='7'>
                 <div class='city-photo-container'>
                     <picture>
@@ -227,7 +227,7 @@
             </div>
         </div>
         <div id="item-8" class="grid-item fiware-foundation  operations  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-8' class='cat-bio' data-modal='8'>
                 <div class='city-photo-container'>
                     <picture>
@@ -254,7 +254,7 @@
             </div>
         </div>
         <div id="item-9" class="grid-item fiware-foundation  operations  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-9' class='cat-bio' data-modal='9'>
                 <div class='city-photo-container'>
                     <picture>
@@ -284,7 +284,7 @@
             </div>
         </div>
         <div id="item-10" class="grid-item fiware-foundation  operations  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-10' class='cat-bio' data-modal='10'>
                 <div class='city-photo-container'>
                     <picture>
@@ -311,7 +311,7 @@
             </div>
         </div>
         <div id="item-11" class="grid-item fiware-foundation  operations  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-11' class='cat-bio' data-modal='11'>
                 <div class='city-photo-container'>
                     <picture>
@@ -338,7 +338,7 @@
             </div>
         </div>
         <div id="item-12" class="grid-item fiware-foundation  technical  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-12' class='cat-bio' data-modal='12'>
                 <div class='city-photo-container'>
                     <picture>
@@ -365,7 +365,7 @@
             </div>
         </div>
         <div id="item-13" class="grid-item fiware-foundation  technical  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-13' class='cat-bio' data-modal='13'>
                 <div class='city-photo-container'>
                     <picture>
@@ -392,7 +392,7 @@
             </div>
         </div>
         <div id="item-14" class="grid-item fiware-foundation  operations  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-14' class='cat-bio' data-modal='14'>
                 <div class='city-photo-container'>
                     <picture>
@@ -419,7 +419,7 @@
             </div>
         </div>
         <div id="item-15" class="grid-item fiware-foundation  technical  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-15' class='cat-bio' data-modal='15'>
                 <div class='city-photo-container'>
                     <picture>
@@ -446,7 +446,7 @@
             </div>
         </div>
         <div id="item-16" class="grid-item fiware-foundation  operations  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-16' class='cat-bio' data-modal='16'>
                 <div class='city-photo-container'>
                     <picture>
@@ -473,7 +473,7 @@
             </div>
         </div>
         <div id="item-17" class="grid-item fiware-foundation  operations  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-17' class='cat-bio' data-modal='17'>
                 <div class='city-photo-container'>
                     <picture>
@@ -503,7 +503,7 @@
             </div>
         </div>
         <div id="item-18" class="grid-item fiware-foundation  technical  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-18' class='cat-bio' data-modal='18'>
                 <div class='city-photo-container'>
                     <picture>
@@ -533,7 +533,7 @@
             </div>
         </div>
         <div id="item-19" class="grid-item fiware-foundation  technical  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-19' class='cat-bio' data-modal='19'>
                 <div class='city-photo-container'>
                     <picture>
@@ -560,7 +560,7 @@
             </div>
         </div>
         <div id="item-20" class="grid-item fiware-foundation  operations  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-20' class='cat-bio' data-modal='20'>
                 <div class='city-photo-container'>
                     <picture>
@@ -587,7 +587,7 @@
             </div>
         </div>
         <div id="item-21" class="grid-item fiware-foundation  operations  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-21' class='cat-bio' data-modal='21'>
                 <div class='city-photo-container'>
                     <picture>
@@ -617,7 +617,7 @@
             </div>
         </div>
         <div id="item-22" class="grid-item fiware-foundation  operations  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-22' class='cat-bio' data-modal='22'>
                 <div class='city-photo-container'>
                     <picture>
@@ -644,7 +644,7 @@
             </div>
         </div>
         <div id="item-23" class="grid-item fiware-foundation  operations  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-23' class='cat-bio' data-modal='23'>
                 <div class='city-photo-container'>
                     <picture>
@@ -671,7 +671,7 @@
             </div>
         </div>
         <div id="item-24" class="grid-item fiware-foundation  operations  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-24' class='cat-bio' data-modal='24'>
                 <div class='city-photo-container'>
                     <picture>
@@ -698,7 +698,7 @@
             </div>
         </div>
         <div id="item-25" class="grid-item fiware-foundation  operations  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-25' class='cat-bio' data-modal='25'>
                 <div class='city-photo-container'>
                     <picture>
@@ -725,7 +725,7 @@
             </div>
         </div>
         <div id="item-26" class="grid-item fiware-foundation  operations  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-26' class='cat-bio' data-modal='26'>
                 <div class='city-photo-container'>
                     <picture>
@@ -752,7 +752,7 @@
             </div>
         </div>
         <div id="item-27" class="grid-item fiware-foundation  technical  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-27' class='cat-bio' data-modal='27'>
                 <div class='city-photo-container'>
                     <picture>
@@ -779,7 +779,7 @@
             </div>
         </div>
         <div id="item-28" class="grid-item fiware-foundation  technical  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-28' class='cat-bio' data-modal='28'>
                 <div class='city-photo-container'>
                     <picture>
@@ -806,7 +806,7 @@
             </div>
         </div>
         <div id="item-29" class="grid-item fiware-foundation  operations  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-29' class='cat-bio' data-modal='29'>
                 <div class='city-photo-container'>
                     <picture>
@@ -833,7 +833,7 @@
             </div>
         </div>
         <div id="item-30" class="grid-item fiware-foundation  technical  ">
-            <a class='f-cat active'>
+            <div class='f-cat active'>
                 <a href='#item-30' class='cat-bio' data-modal='30'>
                 <div class='city-photo-container'>
                     <picture>
