Move app_*.js scripts.

--- a/showcase/cities4cities/index.html
+++ b/showcase/cities4cities/index.html
@@ -901,7 +901,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
 <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
-<script src="../../app_marketplace.js"></script>
+<script src="../app_marketplace.js"></script>
 <script>
 	var scr = document.createElement("script");
 	scr.src = "./pageData.js" + "?ts=" + Math.round(new Date().getTime()/3600000);
