--- a/showcase/powered-by-fiware/index.html
+++ b/showcase/powered-by-fiware/index.html
@@ -957,7 +957,7 @@ try {
 }
 </script>
 
-<script src="../../app_marketplace.js"></script>
+<script src="../app_marketplace.js"></script>
 
 <script>
 	var scr = document.createElement("script");
