--- a/directories/ihubs/filters.html
+++ b/directories/ihubs/filters.html
@@ -79,6 +79,7 @@
                     <option value='switzerland'>Switzerland</option>
                     <option value='tunisia'>Tunisia</option>
                     <option value='ukraine'>Ukraine</option>
+                    <option value='united-kingdom'>United Kingdom</option>
                     <option value='uruguay'>Uruguay</option>
                     <option value='usa'>USA</option>
         </select>
